Bug 363916 - Wrong formatting in the variable manager for long lists
Summary: Wrong formatting in the variable manager for long lists
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: maxima-backend (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Alexander Semke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-03 21:11 UTC by Alexander Semke
Modified: 2016-11-06 18:23 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 16.12
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexander Semke 2016-06-03 21:11:10 UTC
For long lists an empty entry in the variable manager is created.

Reproducible: Always

Steps to Reproduce:
1. create a short list via  x1:makelist(t,t,0,0.2,0.05)$ and observe the correct result in the variable manager
2. create a long list via x2:makelist(t,t,0,0.2,0.0005)$ and observe a new empty entry with no name and no value.


Expected Results:  
I would expect to have a shortened value for x2: show  couple of the first elements and couple of last elements and separate them with "...".
Comment 1 Alexander Semke 2016-11-06 18:23:27 UTC
Git commit 0dd2b9672369ebda020993fb2f583fe6c3c6f865 by Alexander Semke.
Committed on 06/11/2016 at 19:22.
Pushed by asemke into branch 'master'.

Remove line breaks in maxima's lists with many elements.
FIXED-IN: 16.12

M  +4    -4    src/backends/maxima/maximavariablemodel.cpp

http://commits.kde.org/cantor/0dd2b9672369ebda020993fb2f583fe6c3c6f865