Remove line breaks in maxima's lists with many elements.

BUG: 363916
FIXED-IN: 16.12